complete code html practice two

--- a/rwd_practice_two/index.html
+++ b/rwd_practice_two/index.html
@@ -35,8 +35,8 @@
       <!-- End Background -->
 
       <!-- Hero -->
-      <section class="hero-layout section--dark">
-        <div class="hero-title">
+      <section class="display--flex hero-layout section--dark">
+        <div class="display--flex hero-title gap--7">
           <h2 class="text-h2">Lightning fast prototyping</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
@@ -46,14 +46,14 @@
       <!-- End Hero -->
 
       <!-- Feature -->
-      <section class="feature-layout section--light">
-        <div class="feature__title-block">
+      <section class="display--flex feature-layout section--light">
+        <div class="display--flex feature__title-block gap--7">
           <h3 class="text-h3">At your fingertips</h3>
           <h2 class="text-h2">Features</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
 
-        <ul class="feature__content-block">
+        <ul class="display--flex feature__content-block">
           <li>
             <div class="item-block">
               <img src="/src/asset/img/feature-icon.jpg" alt="Feature icon" />
@@ -80,8 +80,8 @@
       <!-- End Feature -->
 
       <!-- Lightning -->
-      <section class="introduce-product-layout section--light">
-        <div class="introduce-title">
+      <section class="display--flex introduce-product-layout section--light">
+        <div class="display--flex introduce-title gap--7">
           <h2 class="text-h2">Lightning fast prototyping</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
@@ -91,15 +91,15 @@
       <!-- End Lightning -->
 
       <!-- Newsletter -->
-      <section class="newsletter-layout section--dark">
-        <div class="newsletter-title">
+      <section class="display--flex newsletter-layout section--dark">
+        <div class="display--flex gap--7">
           <h3 class="text-h3">At your fingertips</h3>
           <h2 class="text-h2">Newsletter</h2>
         </div>
-        <form class="form-subscribe">
+        <form class="display--flex form-subscribe">
           <h3 class="text-h3">Subscribe to our Newsletter</h3>
           <p class="text-p">Available exclusivery on Figmaland</p>
-          <div class="items-subscribe">
+          <div class="display--flex items-subscribe">
             <input class="input" type="text" placeholder="Your Email" />
             <button class="btn text-subscribe btn-primary" type="submit">Subscribe</button>
           </div>
@@ -108,23 +108,23 @@
       <!-- End Newsletter -->
 
       <!-- Partner -->
-      <section class="partner-layout section--light">
-        <div class="partner-title">
+      <section class="display--flex partner-layout section--light">
+        <div class="display--flex partner-title gap--7">
           <h2 class="text-h2">Partners</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
-        <ul class="partner-card">
-          <li class="partner__card-content">
+        <ul class="display--flex partner-card">
+          <li class="display--flex partner__card-content">
             <h5 class="text-h5">Client Name</h5>
             <img src="/src/asset/apiary.svg" alt="Apiary Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
-          <li class="partner__card-content">
+          <li class="display--flex partner__card-content">
             <h5 class="text-h5">Client Name</h5>
             <img src="/src/asset/android.svg" alt="Android Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
-          <li class="partner__card-content">
+          <li class="display--flex partner__card-content">
             <h5 class="text-h5">Client Name</h5>
             <img src="/src/asset/basecamp.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
@@ -135,14 +135,14 @@
       <!-- End Partner -->
 
       <!-- Testimonial -->
-      <section class="testimonial-layout section--light">
+      <section class="display--flex testimonial-layout section--light">
         <h2 class="text-h2">Testimonials</h2>
-        <div class="testimonial-card">
+        <div class="display--flex testimonial-card">
           <img src="/src/asset/img/dropbox.png" alt="Dropbox" />
           <p class="text-p">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.</p>
           <div class="testimonial__card-items">
             <img src="/src/asset/img/avatar.jpg" alt="Avatar" />
-            <div class="items-span">
+            <div class="display--flex items-span">
               <span>Organize across</span>
               <span>Ui designer</span>
             </div>
@@ -153,48 +153,48 @@
       <!-- End Testimonial -->
 
       <!-- Pricing -->
-      <section class="pricing-layout section--light">
-        <div class="pricing-title">
+      <section class="display--flex pricing-layout section--light">
+        <div class="display--flex gap--7">
           <h2 class="text-h2">Pricing</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
-        <ul class="pricing__card">
-          <li class="pricing__card-content">
-            <div class="pricing__card-title">
+        <ul class="display--flex pricing__card">
+          <li class="display--flex pricing__card-content">
+            <div class="display--flex pricing__card-title">
               <h3 class="text-h3">Free</h3>
               <h5 class="text-h5">Organize across all apps by hand</h5>
             </div>
             <div class="pricing__card-items">
               <span class="text-h1">10</span>
-              <div>
+              <div class="display--flex">
                 <span class="text-h3">$</span>
                 <span class="text-h5">Per Month</span>
               </div>
             </div>
             <button class="btn text-btn btn-secondary">Order Now</button>
           </li>
-          <li class="pricing__card-content">
-            <div class="pricing__card-title">
+          <li class="display--flex pricing__card-content">
+            <div class="display--flex pricing__card-title">
               <h3 class="text-h3">Free</h3>
               <h5 class="text-h5">Organize across all apps by hand</h5>
             </div>
             <div class="pricing__card-items">
               <span class="text-h1">10</span>
-              <div>
+              <div class="display--flex">
                 <span class="text-h3">$</span>
                 <span class="text-h5">Per Month</span>
               </div>
             </div>
             <button class="btn text-btn btn-secondary">Order Now</button>
           </li>
-          <li class="pricing__card-content">
-            <div class="pricing__card-title">
+          <li class="display--flex pricing__card-content">
+            <div class="display--flex pricing__card-title">
               <h3 class="text-h3">Free</h3>
               <h5 class="text-h5">Organize across all apps by hand</h5>
             </div>
             <div class="pricing__card-items">
               <span class="text-h1">10</span>
-              <div>
+              <div class="display--flex">
                 <span class="text-h3">$</span>
                 <span class="text-h5">Per Month</span>
               </div>
@@ -206,8 +206,8 @@
       <!-- End Pricing -->
 
       <!-- Contact -->
-      <section class="contact-layout section--dark">
-        <div class="contact-title">
+      <section class="display--flex contact-layout section--dark">
+        <div class="display--flex gap--7">
           <h2 class="text-h2">Contact Us</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
@@ -222,7 +222,7 @@
             <img src="/src/asset/linked-in.svg" alt="" />
           </a>
         </div>
-        <address class="contact-address">
+        <address class="display--flex contact-address">
           <div>
             <img src="/src/asset/location.svg" alt="Location" />
             <a class="text-h5" href=""> 6386 Spring St undefined Anchorage, Georgia 12473 United States </a>
@@ -236,15 +236,57 @@
             <a class="text-h5" href="mailto:willie.jennings@example.com">willie.jennings@example.com</a>
           </div>
         </address>
-
-        <form class="contact-form">
-          <input type="text" />
-          <input type="email" />
-          <textarea class=""></textarea>
+        <form class="display--flex contact-form">
+          <input class="input" type="text" placeholder="Your Name" />
+          <input class="input" type="email" placeholder="Your Email" />
+          <textarea placeholder="Your Message"></textarea>
           <button class="btn text-subscribe btn-primary">Send</button>
         </form>
       </section>
       <!-- End Contact -->
     </main>
+
+    <footer class="display--flex footer-layout section--light">
+      <div class="display--flex footer__link-page">
+        <h3 class="text-h3">Pages</h3>
+        <ul class="display--flex link-items">
+          <li><a class="text-link" href="">Eleanor Edwards</a></li>
+          <li><a class="text-link" href="">Ted Robertson</a></li>
+          <li><a class="text-link" href="">Annette Russell</a></li>
+          <li><a class="text-link" href="">Jennie Mckinney</a></li>
+          <li><a class="text-link" href="">Gloria Richards</a></li>
+        </ul>
+      </div>
+      <div class="footer-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1925.1397434389835!2d-149.8646000229361!3d61.1503321755469!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x56c899d638f6b8b9%3A0x8001486daef0fbc!2s6386%20Spring%20St%2C%20Anchorage%2C%20AK%2099518%2C%20USA!5e0!3m2!1sen!2s!4v1686882689691!5m2!1sen!2s" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"> </iframe>
+      </div>
+      <div class="display--flex footer-address-link">
+        <address class="display--flex footer-address">
+          <div>
+            <img src="/src/asset/location.svg" alt="Location" />
+            <a class="text-h5" href=""> 6386 Spring St undefined Anchorage, Georgia 12473 United States </a>
+          </div>
+          <div>
+            <img src="/src/asset/phone.svg" alt="Phone" />
+            <a class="text-h5" href="tel:(843)5550130">(843) 555-0130</a>
+          </div>
+          <div>
+            <img src="/src/asset/email.svg" alt="Email" />
+            <a class="text-h5" href="mailto:willie.jennings@example.com">willie.jennings@example.com</a>
+          </div>
+        </address>
+        <div class="footer__social-network">
+          <a href="">
+            <img src="/src/asset/twitter.svg" alt="" />
+          </a>
+          <a href="">
+            <img src="/src/asset/facebook.svg" alt="" />
+          </a>
+          <a href="">
+            <img src="/src/asset/linked-in.svg" alt="" />
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
