--- a/rwd_practice_two/index.html
+++ b/rwd_practice_two/index.html
@@ -8,39 +8,61 @@
     <link rel="stylesheet" href="/style/main.css" />
   </head>
   <body style="box-sizing: border-box">
-    <header class="header-layout">
+    <header class="header-layout section--dark">
       <div class="header-logo">
         <img src="/src/asset/img/logo.png" alt="Figma Land" />
       </div>
-      <div>
+      <div class="header__nav-form">
+        <nav class="nav-items">
+          <a class="text-link" href="javascript:void(0)">Home</a>
+          <a class="text-link" href="javascript:void(0)">Product</a>
+          <a class="text-link" href="javascript:void(0)">Pricing</a>
+          <a class="text-link" href="javascript:void(0)">About</a>
+          <a class="text-link" href="javascript:void(0)">Contact</a>
+        </nav>
+        <form class="header__form">
+          <input class="input" type="email" placeholder="Your Email" />
+          <button class="btn"><span class="text-subscribe">Subscribe</span></button>
+        </form>
+      </div>
+      <!-- Hamburger -->
+      <div class="hamburger-menu">
         <input id="menu__toggle" type="checkbox" hidden />
         <label class="menu__btn" for="menu__toggle">
           <span></span>
         </label>
         <ul class="menu__box">
-          <li><a class="menu__item" href="#">Home</a></li>
-          <li><a class="menu__item" href="#">Product</a></li>
-          <li><a class="menu__item" href="#">Pricing</a></li>
-          <li><a class="menu__item" href="#">About</a></li>
-          <li><a class="menu__item" href="#">Contact</a></li>
+          <li><a class="text-link menu__item" href="#">Home</a></li>
+          <li><a class="text-link menu__item" href="#">Product</a></li>
+          <li><a class="text-link menu__item" href="#">Pricing</a></li>
+          <li><a class="text-link menu__item" href="#">About</a></li>
+          <li><a class="text-link menu__item" href="#">Contact</a></li>
         </ul>
       </div>
+      <!-- End Hamburger -->
     </header>
 
     <main class="content">
       <!-- Background -->
       <div class="background-image">
-        <img class="" src="/src/asset/img/background-hero.png" alt="" />
+        <picture>
+          <source media="(min-width:1025px)" srcset="/src/asset/img/background-hero-desktop.png" />
+          <img class="" src="/src/asset/img/background-hero.png" alt="" />
+        </picture>
       </div>
       <!-- End Background -->
 
       <!-- Hero -->
       <section class="display--flex hero-layout section--dark">
         <div class="display--flex hero-title gap--7">
+          <h1 class="text-h1">We focus on ergonomics</h1>
           <h2 class="text-h2">Lightning fast prototyping</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
-        <img class="hero-image" src="/src/asset/img/hero-mark.png" alt="" />
+        <picture>
+          <source media="(min-width: 1025px)" srcset="/src/asset/img/hero-browser.png" />
+          <img class="hero-image" src="/src/asset/img/hero-mark.png" alt="Hero Mark" />
+        </picture>
         <button class="btn text-btn btn-secondary">Try For Free</button>
       </section>
       <!-- End Hero -->
@@ -52,7 +74,6 @@
           <h2 class="text-h2">Features</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
-
         <ul class="display--flex feature__content-block">
           <li>
             <div class="item-block">
@@ -85,8 +106,11 @@
           <h2 class="text-h2">Lightning fast prototyping</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
-        <button class="btn text-btn btn-secondary">Try For Free</button>
-        <img class="introduce-image" src="/src/asset/img/macbook-pro.png" alt="Macbook Pro" />
+        <button class="btn text-btn btn-secondary introduce-btn">Try For Free</button>
+        <picture>
+          <source media="(min-width: 1025px)" srcset="/src/asset/img/macbook-pro-desktop.png" />
+          <img class="introduce-image" src="/src/asset/img/macbook-pro.png" alt="Macbook Pro" />
+        </picture>
       </section>
       <!-- End Lightning -->
 
@@ -95,6 +119,7 @@
         <div class="display--flex gap--7">
           <h3 class="text-h3">At your fingertips</h3>
           <h2 class="text-h2">Newsletter</h2>
+          <h2 class="text-h2">Lightning fast prototyping</h2>
         </div>
         <form class="display--flex form-subscribe">
           <h3 class="text-h3">Subscribe to our Newsletter</h3>
@@ -129,6 +154,21 @@
             <img src="/src/asset/basecamp.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
+          <li class="display--flex partner__card-content">
+            <h5 class="text-h5">Client Name</h5>
+            <img src="/src/asset/basecamp.svg" alt="Basecamp Icon" />
+            <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          </li>
+          <li class="display--flex partner__card-content">
+            <h5 class="text-h5">Client Name</h5>
+            <img src="/src/asset/airbnb.svg" alt="Basecamp Icon" />
+            <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          </li>
+          <li class="display--flex partner__card-content">
+            <h5 class="text-h5">Client Name</h5>
+            <img src="/src/asset/app-store.svg" alt="Basecamp Icon" />
+            <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+          </li>
         </ul>
         <button class="btn text-btn btn-secondary">Try For Free</button>
       </section>
@@ -141,7 +181,10 @@
           <img src="/src/asset/img/dropbox.png" alt="Dropbox" />
           <p class="text-p">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.</p>
           <div class="testimonial__card-items">
-            <img src="/src/asset/img/avatar.jpg" alt="Avatar" />
+            <picture>
+              <source media="(min-width: 1025px)" srcset="/src/asset/img/avatar-desktop.jpg" />
+              <img src="/src/asset/img/avatar.jpg" alt="Avatar" />
+            </picture>
             <div class="display--flex items-span">
               <span>Organize across</span>
               <span>Ui designer</span>
@@ -213,13 +256,13 @@
         </div>
         <div class="social-network-items">
           <a href="">
-            <img src="/src/asset/twitter.svg" alt="" />
+            <img src="/src/asset/twitter.svg" alt="Twitter" />
           </a>
           <a href="">
-            <img src="/src/asset/facebook.svg" alt="" />
+            <img src="/src/asset/facebook.svg" alt="Facebook" />
           </a>
           <a href="">
-            <img src="/src/asset/linked-in.svg" alt="" />
+            <img src="/src/asset/linked-in.svg" alt="Linked In" />
           </a>
         </div>
         <address class="display--flex contact-address">
