code responsive tablet practice two

--- a/rwd_practice_two/index.html
+++ b/rwd_practice_two/index.html
@@ -6,6 +6,8 @@
     <title>Figma Land</title>
     <link rel="stylesheet" href="/style/reset/reset.css" />
     <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/css/layout/grid.css" />
+    <!-- <link rel="stylesheet" href="/src/js/title.js" /> -->
   </head>
   <body style="box-sizing: border-box">
     <header class="header-layout section--dark">
@@ -332,4 +334,6 @@
       </div>
     </footer>
   </body>
+  <!-- <script src="/src/asset/js/title.js"></script> -->
+  <script src="/src/js/title.js"></script>
 </html>
