--- a/rwd_practice_two/index.html
+++ b/rwd_practice_two/index.html
@@ -6,13 +6,13 @@
     <title>Figma Land</title>
     <link rel="stylesheet" href="/style/reset/reset.css" />
     <link rel="stylesheet" href="/style/main.css" />
-    <link rel="stylesheet" href="/style/css/layout/grid.css" />
-    <!-- <link rel="stylesheet" href="/src/js/title.js" /> -->
   </head>
   <body style="box-sizing: border-box">
     <header class="header-layout section--dark">
       <div class="header-logo">
-        <img src="/src/asset/img/logo.png" alt="Figma Land" />
+        <a href="javascript:void(0)">
+          <img src="/src/asset/img/logo.png" alt="Figma Land" />
+        </a>
       </div>
       <div class="header__nav-form">
         <nav class="nav-items">
@@ -24,7 +24,7 @@
         </nav>
         <form class="header__form">
           <input class="input" type="email" placeholder="Your Email" />
-          <button class="btn"><span class="text-subscribe">Subscribe</span></button>
+          <button class="btn pulse-btn" type="submit"><span class="text-btn">Subscribe</span></button>
         </form>
       </div>
       <!-- Hamburger -->
@@ -34,11 +34,11 @@
           <span></span>
         </label>
         <ul class="menu__box">
-          <li><a class="text-link menu__item" href="#">Home</a></li>
-          <li><a class="text-link menu__item" href="#">Product</a></li>
-          <li><a class="text-link menu__item" href="#">Pricing</a></li>
-          <li><a class="text-link menu__item" href="#">About</a></li>
-          <li><a class="text-link menu__item" href="#">Contact</a></li>
+          <li><a class="text-link menu__item" href="javascript:void(0)">Home</a></li>
+          <li><a class="text-link menu__item" href="javascript:void(0)">Product</a></li>
+          <li><a class="text-link menu__item" href="javascript:void(0)">Pricing</a></li>
+          <li><a class="text-link menu__item" href="javascript:void(0)">About</a></li>
+          <li><a class="text-link menu__item" href="javascript:void(0)">Contact</a></li>
         </ul>
       </div>
       <!-- End Hamburger -->
@@ -49,7 +49,7 @@
       <div class="background-image">
         <picture>
           <source media="(min-width:1025px)" srcset="/src/asset/img/background-hero-desktop.png" />
-          <img class="" src="/src/asset/img/background-hero.png" alt="" />
+          <img src="/src/asset/img/background-hero.png" alt="Background" />
         </picture>
       </div>
       <!-- End Background -->
@@ -63,9 +63,9 @@
         </div>
         <picture>
           <source media="(min-width: 1025px)" srcset="/src/asset/img/hero-browser.png" />
-          <img class="hero-image" src="/src/asset/img/hero-mark.png" alt="Hero Mark" />
+          <img class="hero-image" src="/src/asset/img/hero-browser-mobile.png" alt="Hero Mark" />
         </picture>
-        <button class="btn text-btn btn-secondary">Try For Free</button>
+        <button class="btn text-h3 btn-secondary" type="submit">Try For Free</button>
       </section>
       <!-- End Hero -->
 
@@ -79,21 +79,27 @@
         <ul class="display--flex feature__content-block">
           <li>
             <div class="item-block">
-              <img src="/src/asset/img/feature-icon.jpg" alt="Feature icon" />
+              <picture>
+                <source media="(min-width: 1025px)" srcset="/src/asset/img/feature-icon-1.jpg" />
+                <img src="/src/asset/img/feature-icon.jpg" alt="Feature Icon" />
+              </picture>
               <h3 class="text-h3">The best products start with Sketch</h3>
             </div>
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal.</p>
           </li>
           <li>
             <div class="item-block">
-              <img src="/src/asset/img/feature-icon.jpg" alt="Feature icon" />
+              <picture>
+                <source media="(min-width: 1025px)" srcset="/src/asset/img/feature-icon-2.jpg" />
+                <img src="/src/asset/img/feature-icon.jpg" alt="Feature Icon" />
+              </picture>
               <h3 class="text-h3">Fastest way to organize</h3>
             </div>
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal.</p>
           </li>
           <li>
             <div class="item-block">
-              <img src="/src/asset/img/feature-icon.jpg" alt="Feature icon" />
+              <img src="/src/asset/img/feature-icon.jpg" alt="Feature Icon" />
               <h3 class="text-h3">Work better together</h3>
             </div>
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal.</p>
@@ -108,7 +114,7 @@
           <h2 class="text-h2">Lightning fast prototyping</h2>
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
-        <button class="btn text-btn btn-secondary introduce-btn">Try For Free</button>
+        <button class="btn text-h3 btn-secondary introduce-btn" type="submit">Try For Free</button>
         <picture>
           <source media="(min-width: 1025px)" srcset="/src/asset/img/macbook-pro-desktop.png" />
           <img class="introduce-image" src="/src/asset/img/macbook-pro.png" alt="Macbook Pro" />
@@ -127,8 +133,8 @@
           <h3 class="text-h3">Subscribe to our Newsletter</h3>
           <p class="text-p">Available exclusivery on Figmaland</p>
           <div class="display--flex items-subscribe">
-            <input class="input" type="text" placeholder="Your Email" />
-            <button class="btn text-subscribe btn-primary" type="submit">Subscribe</button>
+            <input class="input" type="email" placeholder="Your Email" />
+            <button class="btn text-btn btn-primary pulse-btn" type="submit">Subscribe</button>
           </div>
         </form>
       </section>
@@ -172,7 +178,7 @@
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
         </ul>
-        <button class="btn text-btn btn-secondary">Try For Free</button>
+        <button class="btn text-h3 btn-secondary" type="submit">Try For Free</button>
       </section>
       <!-- End Partner -->
 
@@ -181,7 +187,7 @@
         <h2 class="text-h2">Testimonials</h2>
         <div class="display--flex testimonial-card">
           <img src="/src/asset/img/dropbox.png" alt="Dropbox" />
-          <p class="text-p">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.</p>
+          <p class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.</p>
           <div class="testimonial__card-items">
             <picture>
               <source media="(min-width: 1025px)" srcset="/src/asset/img/avatar-desktop.jpg" />
@@ -193,7 +199,7 @@
             </div>
           </div>
         </div>
-        <button class="btn text-btn btn-secondary">More Testimonials</button>
+        <button class="btn text-h3 btn-secondary" type="submit">More Testimonials</button>
       </section>
       <!-- End Testimonial -->
 
@@ -216,7 +222,7 @@
                 <span class="text-h5">Per Month</span>
               </div>
             </div>
-            <button class="btn text-btn btn-secondary">Order Now</button>
+            <button class="btn text-btn btn-secondary" type="submit">Order Now</button>
           </li>
           <li class="display--flex pricing__card-content">
             <div class="display--flex pricing__card-title">
@@ -230,7 +236,7 @@
                 <span class="text-h5">Per Month</span>
               </div>
             </div>
-            <button class="btn text-btn btn-secondary">Order Now</button>
+            <button class="btn text-btn btn-secondary" type="submit">Order Now</button>
           </li>
           <li class="display--flex pricing__card-content">
             <div class="display--flex pricing__card-title">
@@ -244,7 +250,7 @@
                 <span class="text-h5">Per Month</span>
               </div>
             </div>
-            <button class="btn text-btn btn-secondary">Order Now</button>
+            <button class="btn text-btn btn-secondary" type="submit">Order Now</button>
           </li>
         </ul>
       </section>
@@ -257,20 +263,20 @@
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
         <div class="social-network-items">
-          <a href="">
-            <img src="/src/asset/twitter.svg" alt="Twitter" />
+          <a href="javascript:void(0)">
+            <img class="pulse" src="/src/asset/twitter.svg" alt="Twitter" />
           </a>
-          <a href="">
-            <img src="/src/asset/facebook.svg" alt="Facebook" />
+          <a href="javascript:void(0)">
+            <img class="pulse" src="/src/asset/facebook.svg" alt="Facebook" />
           </a>
-          <a href="">
-            <img src="/src/asset/linked-in.svg" alt="Linked In" />
+          <a href="javascript:void(0)">
+            <img class="pulse" src="/src/asset/linked-in.svg" alt="Linked In" />
           </a>
         </div>
         <address class="display--flex contact-address">
           <div>
             <img src="/src/asset/location.svg" alt="Location" />
-            <a class="text-h5" href=""> 6386 Spring St undefined Anchorage, Georgia 12473 United States </a>
+            <a class="text-h5" href="">6386 Spring St undefined Anchorage, Georgia 12473 United States</a>
           </div>
           <div>
             <img src="/src/asset/phone.svg" alt="Phone" />
@@ -285,7 +291,7 @@
           <input class="input" type="text" placeholder="Your Name" />
           <input class="input" type="email" placeholder="Your Email" />
           <textarea placeholder="Your Message"></textarea>
-          <button class="btn text-subscribe btn-primary">Send</button>
+          <button class="btn text-btn btn-primary pulse" type="submit">Send</button>
         </form>
       </section>
       <!-- End Contact -->
@@ -295,11 +301,11 @@
       <div class="display--flex footer__link-page">
         <h3 class="text-h3">Pages</h3>
         <ul class="display--flex link-items">
-          <li><a class="text-link" href="">Eleanor Edwards</a></li>
-          <li><a class="text-link" href="">Ted Robertson</a></li>
-          <li><a class="text-link" href="">Annette Russell</a></li>
-          <li><a class="text-link" href="">Jennie Mckinney</a></li>
-          <li><a class="text-link" href="">Gloria Richards</a></li>
+          <li><a class="text-link" href="javascript:void(0)">Eleanor Edwards</a></li>
+          <li><a class="text-link" href="javascript:void(0)">Ted Robertson</a></li>
+          <li><a class="text-link" href="javascript:void(0)">Annette Russell</a></li>
+          <li><a class="text-link" href="javascript:void(0)">Jennie Mckinney</a></li>
+          <li><a class="text-link" href="javascript:void(0)">Gloria Richards</a></li>
         </ul>
       </div>
       <div class="footer-map">
@@ -309,7 +315,7 @@
         <address class="display--flex footer-address">
           <div>
             <img src="/src/asset/location.svg" alt="Location" />
-            <a class="text-h5" href=""> 6386 Spring St undefined Anchorage, Georgia 12473 United States </a>
+            <a class="text-h5" href="javascript:void(0)">6386 Spring St undefined Anchorage, Georgia 12473 United States</a>
           </div>
           <div>
             <img src="/src/asset/phone.svg" alt="Phone" />
@@ -321,19 +327,18 @@
           </div>
         </address>
         <div class="footer__social-network">
-          <a href="">
-            <img src="/src/asset/twitter.svg" alt="" />
+          <a href="javascript:void(0)">
+            <img class="pulse" src="/src/asset/twitter.svg" alt="Twitter" />
           </a>
-          <a href="">
-            <img src="/src/asset/facebook.svg" alt="" />
+          <a href="javascript:void(0)">
+            <img class="pulse" src="/src/asset/facebook.svg" alt="Facebook" />
           </a>
-          <a href="">
-            <img src="/src/asset/linked-in.svg" alt="" />
+          <a href="javascript:void(0)">
+            <img class="pulse" src="/src/asset/linked-in.svg" alt="Linked In" />
           </a>
         </div>
       </div>
     </footer>
   </body>
-  <!-- <script src="/src/asset/js/title.js"></script> -->
   <script src="/src/js/title.js"></script>
 </html>
