fix code practice two

--- a/rwd_practice_two/index.html
+++ b/rwd_practice_two/index.html
@@ -62,8 +62,8 @@
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
         <picture>
-          <source media="(min-width: 1025px)" srcset="/src/asset/img/hero-browser.png" />
-          <img class="hero-image" src="/src/asset/img/hero-browser-mobile.png" alt="Hero Mark" />
+          <source media="(min-width: 1025px)" srcset="/src/asset/img/hero-browser.jpg" />
+          <img class="hero-image" src="/src/asset/img/hero-browser-mobile.jpg" alt="Hero Mark" />
         </picture>
         <button class="btn text-h3 btn-secondary" type="submit">Try For Free</button>
       </section>
