fix coded practice two

--- a/rwd_practice_two/index.html
+++ b/rwd_practice_two/index.html
@@ -244,7 +244,7 @@
               <h5 class="text-h5">Organize across all apps by hand</h5>
             </div>
             <div class="pricing__card-items">
-              <span class="text-h1">10</span>
+              <span class="text-h1 price">10</span>
               <div class="display--flex">
                 <span class="text-h3">$</span>
                 <span class="text-h5">Per Month</span>
