fix comment of mentor

--- a/rwd_practice_two/src/index.html
+++ b/rwd_practice_two/src/index.html
@@ -267,14 +267,14 @@
           <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
         <div class="social social--padding">
-          <a href="javascript:void(0)">
-            <img class="pulse social--wh" src="/asset/twitter.svg" alt="Twitter" />
+          <a class="social--wh" href="javascript:void(0)">
+            <img class="pulse" src="/asset/twitter.svg" alt="Twitter" />
           </a>
-          <a href="javascript:void(0)">
-            <img class="pulse social--wh" src="/asset/facebook.svg" alt="Facebook" />
+          <a class="social--wh" href="javascript:void(0)">
+            <img class="pulse" src="/asset/facebook.svg" alt="Facebook" />
           </a>
-          <a href="javascript:void(0)">
-            <img class="pulse social--wh" src="/asset/linked-in.svg" alt="Linked In" />
+          <a class="social--wh" href="javascript:void(0)">
+            <img class="pulse" src="/asset/linked-in.svg" alt="Linked In" />
           </a>
         </div>
         <address class="display--flex contact-address">
@@ -331,14 +331,14 @@
           </div>
         </address>
         <div class="social">
-          <a href="javascript:void(0)">
-            <img class="pulse social--wh" src="/asset/twitter.svg" alt="Twitter" />
+          <a class="social--wh" href="javascript:void(0)">
+            <img class="pulse" src="/asset/twitter.svg" alt="Twitter" />
           </a>
-          <a href="javascript:void(0)">
-            <img class="pulse social--wh" src="/asset/facebook.svg" alt="Facebook" />
+          <a class="social--wh" href="javascript:void(0)">
+            <img class="pulse" src="/asset/facebook.svg" alt="Facebook" />
           </a>
-          <a href="javascript:void(0)">
-            <img class="pulse social--wh" src="/asset/linked-in.svg" alt="Linked In" />
+          <a class="social--wh" href="javascript:void(0)">
+            <img class="pulse" src="/asset/linked-in.svg" alt="Linked In" />
           </a>
         </div>
       </div>
