fix comment of mentor

--- a/rwd_practice_two/src/index.html
+++ b/rwd_practice_two/src/index.html
@@ -56,10 +56,12 @@
 
       <!-- Hero -->
       <section class="display--flex hero-layout section--dark">
-        <div class="display--flex hero-title gap--7">
-          <h1 class="text-h1 hiden-mobile">We focus on ergonomics</h1>
-          <h2 class="text-h2 hiden-desktop">Lightning fast prototyping</h2>
-          <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+        <div class="hero-title">
+          <hgroup class="display--flex gap--7">
+            <h1 class="text-h1 hiden-mobile">We focus on ergonomics</h1>
+            <h2 class="text-h2 hiden-desktop">Lightning fast prototyping</h2>
+            <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+          </hgroup>
         </div>
         <picture>
           <source media="(min-width: 1025px)" srcset="/asset/img/hero-browser.jpg" />
@@ -149,32 +151,32 @@
         <ul class="display--flex partner-card">
           <li class="display--flex partner__card-content">
             <h5 class="text-h5">Client Name</h5>
-            <img src="/asset/apiary.svg" alt="Apiary Icon" />
+            <img src="/asset/img/apiary.svg" alt="Apiary Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
           <li class="display--flex partner__card-content">
             <h5 class="text-h5">Client Name</h5>
-            <img src="/asset/android.svg" alt="Android Icon" />
+            <img src="/asset/img/android.svg" alt="Android Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
           <li class="display--flex partner__card-content">
             <h5 class="text-h5">Client Name</h5>
-            <img src="/asset/basecamp.svg" alt="Basecamp Icon" />
+            <img src="/asset/img/basecamp.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
           <li class="display--flex partner__card-content hiden-mobile">
             <h5 class="text-h5">Client Name</h5>
-            <img src="/asset/basecamp.svg" alt="Basecamp Icon" />
+            <img src="/asset/img/basecamp.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
           <li class="display--flex partner__card-content hiden-mobile">
             <h5 class="text-h5">Client Name</h5>
-            <img src="/asset/airbnb.svg" alt="Basecamp Icon" />
+            <img src="/asset/img/airbnb.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
           <li class="display--flex partner__card-content hiden-mobile">
             <h5 class="text-h5">Client Name</h5>
-            <img src="/asset/app-store.svg" alt="Basecamp Icon" />
+            <img src="/asset/img/app-store.svg" alt="Basecamp Icon" />
             <p class="text-p">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
           </li>
         </ul>
@@ -268,26 +270,26 @@
         </div>
         <div class="social social--padding">
           <a class="social--wh" href="javascript:void(0)">
-            <img class="pulse" src="/asset/twitter.svg" alt="Twitter" />
+            <img class="pulse" src="/asset/img/twitter.svg" alt="Twitter" />
           </a>
           <a class="social--wh" href="javascript:void(0)">
-            <img class="pulse" src="/asset/facebook.svg" alt="Facebook" />
+            <img class="pulse" src="/asset/img/facebook.svg" alt="Facebook" />
           </a>
           <a class="social--wh" href="javascript:void(0)">
-            <img class="pulse" src="/asset/linked-in.svg" alt="Linked In" />
+            <img class="pulse" src="/asset/img/linked-in.svg" alt="Linked In" />
           </a>
         </div>
         <address class="display--flex contact-address">
           <div>
-            <img src="/asset/location.svg" alt="Location" />
+            <img src="/asset/img/location.svg" alt="Location" />
             <a class="text-h5" href="">6386 Spring St undefined Anchorage, Georgia 12473 United States</a>
           </div>
           <div>
-            <img src="/asset/phone.svg" alt="Phone" />
+            <img src="/asset/img/phone.svg" alt="Phone" />
             <a class="text-h5" href="tel:(843)5550130">(843) 555-0130</a>
           </div>
           <div>
-            <img src="/asset/email.svg" alt="Email" />
+            <img src="/asset/img/email.svg" alt="Email" />
             <a class="text-h5" href="mailto:willie.jennings@example.com">willie.jennings@example.com</a>
           </div>
         </address>
@@ -318,27 +320,27 @@
       <div class="display--flex footer-address-link">
         <address class="display--flex footer-address">
           <div>
-            <img src="/asset/location.svg" alt="Location" />
+            <img src="/asset/img/location.svg" alt="Location" />
             <a class="text-h5" href="javascript:void(0)">6386 Spring St undefined Anchorage, Georgia 12473 United States</a>
           </div>
           <div>
-            <img src="/asset/phone.svg" alt="Phone" />
+            <img src="/asset/img/phone.svg" alt="Phone" />
             <a class="text-h5" href="tel:(843)5550130">(843) 555-0130</a>
           </div>
           <div>
-            <img src="/asset/email.svg" alt="Email" />
+            <img src="/asset/img/email.svg" alt="Email" />
             <a class="text-h5" href="mailto:willie.jennings@example.com">willie.jennings@example.com</a>
           </div>
         </address>
         <div class="social">
           <a class="social--wh" href="javascript:void(0)">
-            <img class="pulse" src="/asset/twitter.svg" alt="Twitter" />
+            <img class="pulse" src="/asset/img/twitter.svg" alt="Twitter" />
           </a>
           <a class="social--wh" href="javascript:void(0)">
-            <img class="pulse" src="/asset/facebook.svg" alt="Facebook" />
+            <img class="pulse" src="/asset/img/facebook.svg" alt="Facebook" />
           </a>
           <a class="social--wh" href="javascript:void(0)">
-            <img class="pulse" src="/asset/linked-in.svg" alt="Linked In" />
+            <img class="pulse" src="/asset/img/linked-in.svg" alt="Linked In" />
           </a>
         </div>
       </div>
