fix comment of mentor

--- a/rwd_practice_two/src/index.html
+++ b/rwd_practice_two/src/index.html
@@ -56,12 +56,10 @@
 
       <!-- Hero -->
       <section class="display--flex hero-layout section--dark">
-        <div class="hero-title">
-          <hgroup class="display--flex gap--7">
-            <h1 class="text-h1 hiden-mobile">We focus on ergonomics</h1>
-            <h2 class="text-h2 hiden-desktop">Lightning fast prototyping</h2>
-            <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
-          </hgroup>
+        <div class="hero-title display--flex gap--7">
+          <h1 class="text-h1 hiden-mobile">We focus on ergonomics</h1>
+          <h2 class="text-h2 hiden-desktop">Lightning fast prototyping</h2>
+          <h4 class="text-h4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
         </div>
         <picture>
           <source media="(min-width: 1025px)" srcset="/asset/img/hero-browser.jpg" />
